--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+/**
+ * Reset css.
+ */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 :root {
     --backgroundColor1: #F5F3EF;
     --backgroundColor2: #FAF9F7;
     --green: #00AC66;
+    --text: #292929;
+    --light-text: #A6A6A6;
 }
 
 BODY {
+    width: 1440px;
     background-color: var(--backgroundColor1);
 }
 
@@ -95,13 +110,36 @@ H2 {
     height: 539px;
 }
 
-.book-title {
-    font-size: 16px;
+.book {
     font-family: Inter, serif;
     font-weight: 400;
+
+    display: block;
+    width: 200px;
+    height: 324px;
+}
+
+.book-title {
+    font-size: 16px;
+    line-height: 19px;
+}
+
+.book-author {
+    color: var(--light-text);
+    font-size: 14px;
+    line-height: 17px;
+}
+
+.book-seller {
+    color: var(--light-text);
+    font-size: 10px;
+    font-style: italic;
+    line-height: 12px;
 }
 
 SECTION#home {
+    margin-top: 80px;
+    margin-bottom: 128px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -142,6 +180,18 @@ INPUT[type=button] {
     font-size: 16px;
     font-weight: 600;
     color: white;
+    display: block;
+}
+
+INPUT.inverse {
+    background-color: var(--backgroundColor1);
+    color: var(--green);
+    border: 1px solid var(--green);
+}
+
+INPUT.center {
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #account-icon {
@@ -164,7 +214,13 @@ INPUT[type=button] {
 
 
 #last-books {
+    padding-top: 80px;
+    padding-bottom: 64px;
     background-color: var(--backgroundColor2);
+}
+
+#last-books H2 {
+    padding-bottom: 80px;
 }
 
 .lastbooks {
@@ -182,6 +238,137 @@ INPUT[type=button] {
     word-wrap: break-word;
 }
 
+#last-books INPUT {
+    margin-top: 48px;
+}
+
 .text-center {
     text-align: center;
+}
+
+P {
+    font-family: Inter, sans-serif;
+    font-weight: 300;
+    font-size: 16px;
+    margin-top: 16px;
+}
+
+.lastbooks {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+#how-it-works-title {
+    margin-top: 80px;
+    margin-bottom: 24px;
+}
+
+SECTION#how-it-works {
+    margin-top: 40px;
+    margin-bottom: 48px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    /*flex-wrap: wrap;*/
+    gap: 36px;
+}
+
+SECTION#how-it-works ARTICLE {
+    background-color: white;
+    width: 180px;
+    height: 51px;
+    text-wrap: auto;
+    padding: 44px 18px 44px 17px;
+    font-family: Inter, sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    text-align: center;
+    line-height: 17px;
+    box-sizing: content-box;
+}
+
+#our-values-title {
+    margin-left: 542px;
+}
+
+#our-values {
+    width: 392px;
+    margin-left: 542px;
+    margin-right: 506px;
+}
+
+.light-text {
+    font-family: Inter, sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    font-style: italic;
+    color: var(--light-text);
+}
+
+FOOTER {
+    background-color: white;
+    font-family: Inter, sans-serif;
+    font-weight: 300;
+    font-size: 12px;
+}
+
+FOOTER NAV.right {
+    height: 61px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 40px;
+    margin-right: 64px;
+}
+
+FOOTER NAV A {
+    color: var(--text);
+    text-decoration: none;
+}
+
+FOOTER IMG {
+    width: 22px;
+    height: 18px;
+}
+
+#signature {
+    margin-top: 25px;
+    margin-left: 542px;
+    margin-bottom: 89px;
+    display: flex;
+    flex-direction: row;
+    gap: 239px;
+}
+
+#signature-text {
+    margin-top: 14px;
+    display: block;
+}
+
+#signature IMG {
+
+}
+
+/*#banner-img {
+    width: 100%;
+    clip-path: inset(36% 0 26% 0);
+}*/
+
+#banner {
+    position: relative;
+    width: 100%;
+    height: 230px;
+    overflow: hidden;
+    margin-top: 80px;
+    margin-bottom: 80px;
+}
+
+#banner-img {
+    max-width: 100%;
+    position: absolute;
+    top: -295px;
+    left: 0;
 }
