--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,9 @@ BODY {
 }
 
 HEADER {
-    margin: 15px 150px 0 150px;
+    margin: 0 150px 0 150px;
+    padding: 15px 0 15px 0;
+    height: 80px;
 }
 
 HEADER NAV {
@@ -47,6 +49,13 @@ HEADER NAV .right {
     flex-direction: row;
     justify-content: flex-end;
     gap: 58px;
+
+    /*
+       https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_colors/Relative_colors
+       Syntaxe : color-function(from origin-color channel1 channel2 channel3 / alpha)
+    */
+    border-left: rgb(from var(--light-text) r g b / 0.2) 1px solid;
+    padding-left: 58px;
 }
 
 .logo-with-text {
@@ -122,6 +131,8 @@ H2 {
     font-size: 12px;
     font-style: italic;
     text-align: right;
+    line-height: 14px;
+    margin-top: 12px;
 }
 
 .book {
@@ -179,7 +190,7 @@ SECTION#home {
 }
 
 SECTION#home > DIV {
-    width: 50%;
+    /*width: 50%;*/
 }
 
 SECTION#home > DIV:first-child {
@@ -228,6 +239,10 @@ SECTION#home > DIV:first-child > DIV {
 .center {
     margin-left: auto;
     margin-right: auto;
+}
+
+.icon {
+    vertical-align: middle;
 }
 
 #account-icon {
@@ -401,4 +416,44 @@ FOOTER IMG {
     width: 100%;
     height: 100%;
     object-position: center center;
+}
+
+.exchanges {
+    background-color: var(--backgroundColor2);
+    padding: 130px 263px 80px 263px;
+}
+
+.exchange-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 70px;
+}
+
+#books-exchange {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+
+    /*display: flex;*/
+    /*flex-direction: row;*/
+    justify-content: center;
+    /*flex-wrap: wrap;*/
+    row-gap: 48px;
+    column-gap: 38px;
+}
+
+.book-search {
+    width: 322px;
+    height: 50px;
+    background: url("http://oc.local/projet%206/img/icons/search.svg") no-repeat scroll 12px 16px;
+    background-size: 16px 16px;
+    padding-left: 40px;
+}
+
+.book-search::placeholder {
+    color: var(--light-text);
+    font-family: Inter, sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    opacity: 1;
 }
