--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,7 @@ H2 {
     font-weight: 400;
     display: block;
     width: 200px;
+    height: 100%;
     background-color: white;
     padding-bottom: 23px;
 }
@@ -157,7 +158,6 @@ H2 {
 
 .book-title {
     color: black;
-    text-decoration: none !important;
     font-size: 16px;
     font-weight: 400;
     line-height: 19px;
@@ -239,6 +239,10 @@ SECTION#home > DIV:first-child > DIV {
 .center {
     margin-left: auto;
     margin-right: auto;
+}
+
+.fullwidth {
+    width: 100%;
 }
 
 .icon {
@@ -446,7 +450,7 @@ FOOTER IMG {
     width: 322px;
     height: 50px;
     background: url("http://oc.local/projet%206/img/icons/search.svg") no-repeat scroll 12px 16px;
-    background-size: 16px 16px;
+    /*background-size: 16px 16px;*/
     padding-left: 40px;
 }
 
@@ -456,4 +460,148 @@ FOOTER IMG {
     font-weight: 400;
     font-size: 14px;
     opacity: 1;
+}
+
+.lastbooks A,
+#books-exchange A {
+    text-decoration: none;
+}
+
+#detail {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    background-color: var(--backgroundColor2);
+}
+
+#detail .image {
+    width: 50%;
+    background-color: var(--backgroundColor2);
+    text-align: center;
+    align-content: center;
+}
+
+#detail .image IMG {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+#detail .book {
+    width: 50%;
+    padding-left: 85px;
+    padding-right: 150px;
+    padding-top: 59px;
+    background-color: var(--backgroundColor2);
+}
+
+.book-desc, .book-owner {
+    font-family: Inter, sans-serif;
+    font-weight: 600;
+    font-size: 8px;
+    line-height: 10px;
+    color: var(--text);
+    text-transform: uppercase;
+}
+
+.book-desc-text {
+    font-family: Inter, sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: var(--text);
+}
+
+.detail-book-author {
+    font-family: Inter, sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: var(--light-text);
+}
+
+.breadcrumbs {
+    padding-left: 150px;
+    padding-bottom: 16px;
+    font-family: Inter, sans-serif;
+    font-weight: 300;
+    font-size: 10px;
+    line-height: 12px;
+    color: var(--light-text);
+}
+
+#register {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    background-color: var(--backgroundColor2);
+}
+
+#register .form, #register .image {
+    width: 50%;
+}
+
+#register .form {
+    padding-top: 130px;
+    padding-left: 150px;
+    padding-right: 248px;
+}
+
+.login-link, .register-link {
+    margin-top: 40px;
+    font-family: Inter, sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+}
+
+#register H1, #login H1 {
+    margin-bottom: 56px;
+}
+
+#register LABEL, #login LABEL {
+    font-family: Inter, sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: var(--light-text);
+    margin-bottom: 10px;
+    display: block;
+}
+
+#register INPUT, #login INPUT {
+    margin-bottom: 32px;
+    width: 100%;
+    height: 50px;
+    background-color: white;
+    border: 1px solid #F0F0F0;
+    border-radius: 6px;
+}
+
+#register .login-link A, #login .register-link A {
+    color: var(--text);
+}
+
+#login {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    background-color: var(--backgroundColor2);
+}
+
+#login .form {
+    padding-top: 210px;
+    padding-left: 150px;
+    padding-right: 248px;
+    width: 50%;
+}
+
+#login .image {
+    width: 50%;
+}
+
+HR {
+    width: 27px;
+    height: 1px;
+    color: var(--light-text);
+    margin: 33px 0 33px 0;
 }
