--- a/css/style.css
+++ b/css/style.css
@@ -1,522 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
-/**
- * Reset css.
- */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-:root {
-    --backgroundColor1: #F5F3EF;
-    --backgroundColor2: #FAF9F7;
-    --green: #00AC66;
-    --text: #292929;
-    --light-text: #A6A6A6;
-}
-
-BODY {
-    max-width: 1440px;
-    background-color: var(--backgroundColor1);
-    margin: 0 auto;
-}
-
-HEADER {
-    margin: 0 150px 0 150px;
-    padding: 15px 0 15px 0;
-    height: 80px;
-}
-
-HEADER NAV {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-HEADER NAV .left {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    gap: 78px;
-}
-
-HEADER NAV .right {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    gap: 58px;
-
-    /*
-       https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_colors/Relative_colors
-       Syntaxe : color-function(from origin-color channel1 channel2 channel3 / alpha)
-    */
-    border-left: rgb(from var(--light-text) r g b / 0.2) 1px solid;
-    padding-left: 58px;
-}
-
-.logo-with-text {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 15px;
-
-    font-family: "Playfair Display", serif;
-    font-weight: 600;
-    font-size: 20px;
-    color: var(--green);
-}
-
-.menu-left {
-    display: flex;
-    flex-direction: row;
-    justify-content: left;
-    align-items: center;
-    gap: 42px;
-}
-
-HEADER NAV A {
-    font-family: Inter, sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    text-decoration: none;
-}
-
-HEADER NAV A.current {
-    font-weight: 600;
-}
-
-HEADER NAV A:visited {
-    color: black;
-}
-
-HEADER NAV A .number {
-    color: white;
-    background-color: black;
-    border-radius: 5px;
-    display: inline-block;
-    width: 11px;
-    height: 15px;
-    font-size: 8px;
-    text-align: center;
-    vertical-align: middle;
-
-}
-
-H1 {
-    font-size: 36px;
-    font-weight: 400;
-    font-family: "Playfair Display", serif;
-}
-
-H2 {
-    font-size: 32px;
-    font-weight: 400;
-    font-family: "Playfair Display", serif;
-}
-
-.big-image {
-    width: 404px;
-    height: 539px;
-}
-
-.big-image-signature {
-    color: var(--light-text);
-    font-family: Inter, sans-serif;
-    font-weight: 400;
-    font-size: 12px;
-    font-style: italic;
-    text-align: right;
-    line-height: 14px;
-    margin-top: 12px;
-}
-
-.book {
-    font-family: Inter, serif;
-    font-weight: 400;
-    display: block;
-    width: 200px;
-    height: 100%;
-    background-color: white;
-    padding-bottom: 23px;
-}
-
-.book-image {
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
-    margin-bottom: 20px;
-}
-
-.book-texts {
-    padding-left: 14px;
-}
-
-.book-title {
-    color: black;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 19px;
-    margin-top: 0;
-}
-
-.book-author {
-    color: var(--light-text);
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
-    margin-top: 8px;
-}
-
-.book-seller {
-    color: var(--light-text);
-    font-size: 10px;
-    font-style: italic;
-    line-height: 12px;
-    margin-top: 22px;
-}
-
-SECTION#home {
-    margin-top: 80px;
-    margin-bottom: 128px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 105px;
-}
-
-SECTION#home > DIV {
-    /*width: 50%;*/
-}
-
-SECTION#home > DIV:first-child {
-    display: flex;
-    flex-direction: row;
-    justify-content: right;
-}
-
-SECTION#home > DIV:first-child > DIV {
-    max-width: 329px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    margin-bottom: 71px;
-}
-
-.home-text {
-    text-align: justify;
-    font-family: Inter, sans-serif;
-    font-weight: 300;
-    font-size: 16px;
-    margin-top: 16px;
-    margin-bottom: 40px;
-}
-
-.button {
-    padding: 22px 38px 22px 38px;
-    border-radius: 10px;
-    background-color: var(--green);
-    border: none;
-
-    font-family: Inter, sans-serif;
-    font-size: 16px;
-    font-weight: 600;
-    color: white;
-    display: block;
-    width: fit-content;
-}
-
-.inverse {
-    background-color: var(--backgroundColor1);
-    color: var(--green);
-    border: 1px solid var(--green);
-}
-
-.center {
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.fullwidth {
-    width: 100%;
-}
-
-.icon {
-    vertical-align: middle;
-}
-
-#account-icon {
-    display: inline-block;
-    width: 10px;
-    height: 13px;
-}
-
-#account-icon DIV:first-child {
-    height: 10px;
-    border: black solid 1px;
-    border-radius: 50%;
-}
-
-#account-icon DIV:last-child {
-    height: 4px;
-    border: black solid 1px;
-    border-radius: 40%;
-}
-
-
-#last-books {
-    padding-top: 80px;
-    padding-bottom: 64px;
-    background-color: var(--backgroundColor2);
-}
-
-#last-books H2 {
-    margin-bottom: 80px;
-}
-
-.lastbooks {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    /*flex-wrap: wrap;*/
-    gap: 38px;
-    margin-bottom: 70px;
-}
-
-/*.lastbooks A {*/
-/*    width: 24%;*/
-/*}*/
-
-.lastbooks P {
-    word-wrap: break-word;
-}
-
-#last-books INPUT {
-    margin-top: 48px;
-}
-
-.text-center {
-    text-align: center;
-}
-
-P {
-    font-family: Inter, sans-serif;
-    font-weight: 300;
-    font-size: 16px;
-    margin-top: 16px;
-}
-
-.lastbooks {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-}
-
-#how-it-works-title {
-    margin-top: 80px;
-    margin-bottom: 24px;
-}
-
-SECTION#how-it-works {
-    margin-top: 40px;
-    margin-bottom: 48px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    /*flex-wrap: wrap;*/
-    gap: 36px;
-}
-
-SECTION#how-it-works ARTICLE {
-    background-color: white;
-    width: 180px;
-    height: 51px;
-    text-wrap: auto;
-    padding: 44px 18px 44px 17px;
-    font-family: Inter, sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    text-align: center;
-    line-height: 17px;
-    box-sizing: content-box;
-}
-
-#our-values-title {
-    margin-left: 542px;
-}
-
-#our-values {
-    width: 392px;
-    margin-left: 542px;
-    margin-right: 506px;
-}
-
-.light-text {
-    font-family: Inter, sans-serif;
-    font-weight: 400;
-    font-size: 12px;
-    font-style: italic;
-    color: var(--light-text);
-}
-
-FOOTER {
-    background-color: white;
-    font-family: Inter, sans-serif;
-    font-weight: 300;
-    font-size: 12px;
-}
-
-FOOTER NAV.right {
-    height: 61px;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 40px;
-    padding-right: 64px;
-}
-
-FOOTER NAV A {
-    color: var(--text);
-    text-decoration: none;
-}
-
-FOOTER IMG {
-    width: 22px;
-    height: 18px;
-}
-
-#signature {
-    margin-top: 25px;
-    margin-left: 542px;
-    margin-bottom: 89px;
-    display: flex;
-    flex-direction: row;
-    gap: 239px;
-}
-
-#signature-text {
-    margin-top: 14px;
-    display: block;
-}
-
-#signature IMG {
-
-}
-
-#banner {
-    height: 230px;
-    margin-top: 80px;
-    margin-bottom: 80px;
-}
-
-#banner-img {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    object-position: center center;
-}
-
-.exchanges {
-    background-color: var(--backgroundColor2);
-    padding: 130px 263px 80px 263px;
-}
-
-.exchange-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 70px;
-}
-
-#books-exchange {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-
-    /*display: flex;*/
-    /*flex-direction: row;*/
-    justify-content: center;
-    /*flex-wrap: wrap;*/
-    row-gap: 48px;
-    column-gap: 38px;
-}
-
-.book-search {
-    width: 322px;
-    height: 50px;
-    background: url("http://oc.local/projet%206/img/icons/search.svg") no-repeat scroll 12px 16px;
-    /*background-size: 16px 16px;*/
-    padding-left: 40px;
-}
-
-.book-search::placeholder {
-    color: var(--light-text);
-    font-family: Inter, sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    opacity: 1;
-}
+@import url('common.css');
+@import url('home.css');
+@import url('exchange.css');
+@import url('detail.css');
+@import url('register.css');
+@import url('login.css');
+@import url('account.css');
+@import url('public-account.css');
 
 .lastbooks A,
 #books-exchange A {
     text-decoration: none;
-}
-
-#detail {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    background-color: var(--backgroundColor2);
-}
-
-#detail .image {
-    width: 50%;
-    background-color: var(--backgroundColor2);
-    text-align: center;
-    align-content: center;
-}
-
-#detail .image IMG {
-    max-width: 100%;
-    max-height: 100%;
-}
-
-#detail .book {
-    width: 50%;
-    padding-left: 85px;
-    padding-right: 150px;
-    padding-top: 59px;
-    background-color: var(--backgroundColor2);
-}
-
-.book-desc, .book-owner, .biblio {
-    font-family: Inter, sans-serif;
-    font-weight: 600;
-    font-size: 8px;
-    line-height: 10px;
-    color: var(--text);
-    text-transform: uppercase;
-}
-
-.book-desc-text {
-    font-family: Inter, sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
-    color: var(--text);
-}
-
-.detail-book-author {
-    font-family: Inter, sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 20px;
-    color: var(--light-text);
 }
 
 .breadcrumbs {
@@ -527,23 +23,6 @@ FOOTER IMG {
     font-size: 10px;
     line-height: 12px;
     color: var(--light-text);
-}
-
-#register {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    background-color: var(--backgroundColor2);
-}
-
-#register .form, #register .image {
-    width: 50%;
-}
-
-#register .form {
-    padding-top: 130px;
-    padding-left: 150px;
-    padding-right: 248px;
 }
 
 .login-link, .register-link {
@@ -593,24 +72,6 @@ FOOTER IMG {
     color: var(--text);
 }
 
-#login {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    background-color: var(--backgroundColor2);
-}
-
-#login .form {
-    padding-top: 210px;
-    padding-left: 150px;
-    padding-right: 248px;
-    width: 50%;
-}
-
-#login .image {
-    width: 50%;
-}
-
 HR {
     width: 27px;
     height: 1px;
@@ -618,52 +79,8 @@ HR {
     margin: 33px 0 33px 0;
 }
 
-#account {
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
-    margin: auto 150px auto 150px;
-    background-color: var(--backgroundColor2);
-}
-
-#account H1 {
-    font-size: 26px;
-    margin-top: 90px;
-    margin-bottom: 48px;
-}
-
-#profile {
-    display: flex;
-    flex-direction: row;
-    gap: 33px;
-}
-
-#profile-display, #profile-form {
-    background-color: white;
-}
-
 #profile-display, #profile-form, #book-list {
     border-radius: 20px;
-}
-
-#profile-display {
-    width: 547px;
-    padding-top: 48px;
-    padding-bottom: 93px;
-    text-align: center;
-}
-
-#profile-display .modify {
-    font-family: Inter, sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
-    color: var(--light-text);
-}
-
-#profile-display HR {
-    width: 242px;
-    margin: 48px auto 48px auto;
 }
 
 .nickname-big {
@@ -695,27 +112,9 @@ HR {
     line-height: 17px;
 }
 
-#profile-form {
-    width: 555px;
-    padding: 36px 116px 37px 117px;
-}
-
-#profile-form .personal-info {
-    font-family: Inter, sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 20px;
-    margin-bottom: 26px;
-}
-
 #profile-form INPUT[type=email], #profile-form INPUT[type=text], #profile-form INPUT[type=password], #detail-edit INPUT[type=text] {
     background-color: #EDF2F6;
     padding-left: 14px;
-}
-
-#profile-form .button {
-    width: 150px;
-    height: 63px;
 }
 
 #book-list TBODY TR {
@@ -735,51 +134,4 @@ HR {
     height: 78px;
 }
 
-#account-public {
-    display: flex;
-    flex-direction: row;
-    gap: 28px;
-    margin-top: 103px;
-}
 
-#profile-public {
-    width: 341px;
-    padding-top: 48px;
-    background-color: white;
-    border-radius: 20px;
-    text-align: center;
-}
-
-#profile-public HR {
-    width: 242px;
-    margin: 70px auto 48px auto;
-}
-
-#profile-public A {
-    margin-top: 45px;
-    margin-left: auto;
-    margin-right: auto;
-    text-decoration: none;
-}
-
-#detail-edit {
-    display: flex;
-    flex-direction: row;
-    gap: 118px;
-    margin-left: 150px;
-    margin-right: 150px;
-    background-color: white;
-}
-
-H1.detail-edit {
-    font-family: "Playfair Display", serif;
-    font-weight: 400;
-    font-size: 26px;
-    line-height: 35px;
-    margin-left: 150px;
-}
-
-LABEL:has(+ INPUT:required):after {
-    content: ' *';
-    color: red;
-}
