- améliorations de la syntaxe - suppression du code en double - amélioration de l'affichage des erreurs - implémentation de la recherche sur la page des livres à l'échange - Déplacement de méthodes vers UserController - affichage/masquage de menus si l'utilisateur est identifié ou pas - réaffichage des valeurs du formulaire en cas d'erreur sur la page de création de compte - ajout d'un lien de déconnexion

--- a/css/exchange.css
+++ b/css/exchange.css
@@ -37,3 +37,10 @@
     font-size: 14px;
     opacity: 1;
 }
+
+.exchanges FORM {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
