--- a/css/common.css
+++ b/css/common.css
@@ -260,3 +260,12 @@ FOOTER IMG {
     background-color: white;
     cursor: pointer;
 }
+
+#error-block {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: baseline;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
