--- a/css/common.css
+++ b/css/common.css
@@ -13,6 +13,7 @@
     --green: #00AC66;
     --text: #292929;
     --light-text: #A6A6A6;
+    --form-field-color: #EDF2F6;
 }
 
 BODY {
@@ -114,11 +115,6 @@ H2 {
     font-size: 32px;
     font-weight: 400;
     font-family: "Playfair Display", serif;
-}
-
-LABEL:has(+ INPUT:required):after {
-    content: ' *';
-    color: red;
 }
 
 P {
@@ -249,18 +245,6 @@ FOOTER IMG {
     content: '⚠️ ';
 }
 
-.clear-input-button {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    height: 50px;
-    border: 1px black solid;
-    border-radius: 0 5px 5px 0;
-    background-color: white;
-    cursor: pointer;
-}
-
 #error-block {
     display: flex;
     flex-direction: row;
@@ -268,4 +252,85 @@ FOOTER IMG {
     align-items: baseline;
     margin-top: 100px;
     margin-bottom: 100px;
+}
+
+
+/** FORMULAIRES **/
+
+LABEL {
+    font-family: Inter, sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: var(--light-text);
+    margin-bottom: 10px;
+    display: block;
+}
+
+LABEL:has(+ INPUT:required):after {
+    content: ' *';
+    color: red;
+}
+
+INPUT, SELECT, TEXTAREA {
+    margin-bottom: 32px;
+    width: 100%;
+    height: 50px;
+    background-color: white;
+    border: 1px solid #F0F0F0;
+    border-radius: 6px;
+}
+
+INPUT[type=email], INPUT[type=password], INPUT[type=text] {
+    background-color: var(--form-field-color);
+    padding-left: 14px;
+}
+
+INPUT::placeholder {
+    color: var(--light-text);
+    font-family: Inter, sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    opacity: 1;
+}
+
+INPUT[type=submit] {
+    background-color: var(--green);
+    border: none;
+    height: 63px;
+    width: 100%;
+    font-family: Inter, sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 20px;
+    color: white;
+}
+
+.clear-input-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 25px;
+    height: 50px;
+    border-radius: 0 50px 50px 0;
+    background-color: white;
+    cursor: pointer;
+    border: 1px solid #F0F0F0;
+    color: var(--light-text);
+    font-family: Inter, sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    opacity: 1;
+}
+
+SELECT {
+    height: 50px;
+    width: 100%;
+    background-color: var(--form-field-color);
+    font-family: Inter, sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    padding-left: 14px;
 }
