--- a/css/exchange.css
+++ b/css/exchange.css
@@ -30,17 +30,16 @@
     padding-left: 40px;
 }
 
-.book-search::placeholder {
-    color: var(--light-text);
-    font-family: Inter, sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    opacity: 1;
-}
-
 .exchanges FORM {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+
+#search {
+    margin-bottom: 0;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    background-color: white;
 }
