--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 @import url('common.css');
-@import url('home.css');
-@import url('exchange.css');
-@import url('detail.css');
-@import url('register.css');
-@import url('login.css');
 @import url('account.css');
+@import url('detail.css');
+@import url('detail-edit.css');
+@import url('exchange.css');
+@import url('home.css');
+@import url('login.css');
 @import url('public-account.css');
+@import url('register.css');
 
 .lastbooks A,
 #books-exchange A {
@@ -37,36 +38,6 @@
     margin-bottom: 56px;
 }
 
-#register LABEL, #login LABEL, #profile-form LABEL {
-    font-family: Inter, sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
-    color: var(--light-text);
-    margin-bottom: 10px;
-    display: block;
-}
-
-#register INPUT, #login INPUT, #profile-form INPUT[type=email], #profile-form INPUT[type=text], #profile-form INPUT[type=password] {
-    margin-bottom: 32px;
-    width: 100%;
-    height: 50px;
-    background-color: white;
-    border: 1px solid #F0F0F0;
-    border-radius: 6px;
-}
-
-#register INPUT[type=submit], #login INPUT[type=submit] {
-    background-color: var(--green);
-    border: none;
-    height: 63px;
-    width: 100%;
-    font-family: Inter, sans-serif;
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 20px;
-    color: white;
-}
 
 #register .login-link A, #login .register-link A {
     color: var(--text);
@@ -110,11 +81,6 @@ HR {
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
-}
-
-#profile-form INPUT[type=email], #profile-form INPUT[type=text], #profile-form INPUT[type=password], #detail-edit INPUT[type=text] {
-    background-color: #EDF2F6;
-    padding-left: 14px;
 }
 
 #book-list TBODY TR {
