--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,8 @@
 @import url('detail-edit.css');
 @import url('exchange.css');
 @import url('home.css');
-@import url('login.css');
 @import url('public-account.css');
-@import url('register.css');
+@import url('register-login.css');
 
 .lastbooks A,
 #books-exchange A {
@@ -32,15 +31,6 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
-}
-
-#register H1, #login H1 {
-    margin-bottom: 56px;
-}
-
-
-#register .login-link A, #login .register-link A {
-    color: var(--text);
 }
 
 HR {
