--- a/css/exchange.css
+++ b/css/exchange.css
@@ -13,16 +13,12 @@
 #books-exchange {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-
-    /*display: flex;*/
-    /*flex-direction: row;*/
     justify-content: center;
-    /*flex-wrap: wrap;*/
     row-gap: 48px;
     column-gap: 38px;
 }
 
-#book-search {
+.book-search {
     width: 322px;
     height: 50px;
     background: url("http://oc.local/projet%206/img/icons/search.svg") no-repeat scroll 12px 16px;
@@ -31,7 +27,6 @@
     margin-bottom: 0;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
-    background-color: white;
 }
 
 .exchanges FORM {
@@ -52,7 +47,7 @@
     font-family: Inter, sans-serif;
     font-weight: 400;
     font-size: 14px;
-    background-color: white;
+    background-color: var(--public-form-field-color);
     border: 1px solid #F0F0F0;
     border-radius: 0 6px 6px 0;
 }
