- simplification de la gestion des avatars - gestion de la messagerie

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 @import url('home.css');
 @import url('public-account.css');
 @import url('register-login.css');
+@import url('messenger.css');
 
 .lastbooks A,
 #books-exchange A {
