--- a/css/common.css
+++ b/css/common.css
@@ -15,6 +15,8 @@
     --light-text: #A6A6A6;
     --public-form-field-color: white;
     --member-form-field-color: #EDF2F6;
+    --header-height: 80px;
+    --footer-height: 61px;
 }
 
 BODY {
@@ -26,7 +28,7 @@ BODY {
 HEADER {
     margin: 0 150px 0 150px;
     padding: 15px 0 15px 0;
-    height: 80px;
+    height: var(--header-height);
 }
 
 HEADER NAV {
@@ -149,7 +151,7 @@ FOOTER {
 }
 
 FOOTER NAV.right {
-    height: 61px;
+    height: var(--footer-height);
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
