--- a/css/messenger.css
+++ b/css/messenger.css
@@ -17,7 +17,8 @@
     width: 308px;
     background-color: var(--backgroundColor2);
     border: green 1px solid;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .member-block {
@@ -25,14 +26,18 @@
     flex-direction: row;
     gap: 12px;
     align-items: center;
-    justify-content: center;
     padding: 18px 42px 18px 34px;
     border: red 1px solid;
+}
+
+A.member-block {
+    text-decoration: none;
 }
 
 .member-details {
     display: flex;
     flex-direction: column;
+    width: 172px;
 }
 
 .member-details-1 {
@@ -55,6 +60,10 @@
     font-size: 12px;
     line-height: 15px;
     color: var(--light-text);
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 100%;
+    white-space: nowrap;
 }
 
 .avatar-medium {
