--- a/css/detail.css
+++ b/css/detail.css
@@ -3,6 +3,20 @@
     flex-direction: row;
     justify-content: space-evenly;
     background-color: var(--backgroundColor2);
+    padding-left: calc((100vw - var(--max-width)) / 2);
+    padding-right: calc((100vw - var(--max-width)) / 2);
+}
+
+.breadcrumbs-detail {
+    padding-top: 16px;
+    padding-bottom: 16px;
+    padding-left: var(--real-horizontal-padding);
+    font-family: Inter, sans-serif;
+    font-weight: 300;
+    font-size: 10px;
+    line-height: 12px;
+    color: var(--light-text);
+    background-color: var(--backgroundColor1);
 }
 
 #detail .book {
@@ -21,12 +35,12 @@
 }
 
 #detail .image IMG {
-    /*height: 100%; */
     max-width: 100%;
     max-height: 100%;
 }
 
 .detail-book-author {
+    margin-top: 16px;
     font-family: Inter, sans-serif;
     font-weight: 400;
     font-size: 16px;
@@ -41,6 +55,14 @@
     line-height: 10px;
     color: var(--text);
     text-transform: uppercase;
+}
+
+.book-desc {
+    margin-bottom: 16px;
+}
+
+.book-owner {
+    margin-top: 32px;
 }
 
 .book-desc-text {
@@ -80,4 +102,11 @@
     max-width: 48px;
     max-height: 48px;
     border-radius: 50%;
+}
+
+.detail-hr {
+    width: 27px;
+    height: 1px;
+    color: var(--light-text);
+    margin: 33px 0 33px 0;
 }
