- CSS : correction couleur des liens non visités du menu - CSS : ajout style pour les textes dans le tableau de liste des livres (page de profil) - correction : la redirection après déconnexion ne fonctionnait pas - correction du dump MySQL pour éviter les plantages sur les clés étrangères lors de l'import

--- a/css/account.css
+++ b/css/account.css
@@ -213,6 +213,13 @@
     padding-right: 63px;
 }
 
+#book-list TBODY {
+    font-family: Inter, sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+}
+
 #book-list TBODY TR {
     height: 130px;
 }
